--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/leaflet": "^1.9.16",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.5.0",
     "heroicons": "^2.2.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
