--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-#VITE_API_URL = http://releccud-api.onomo.gold-trader.org/api/v1
-VITE_API_URL = http://192.168.0.150/api/v1
+# VITE_API_URL = http://releccud-api.onomo.gold-trader.org/api/v1
+VITE_API_URL =  http://releccud-api.online-trader.net/api/v1
+# http://192.168.0.150/api/v1
