--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL = http://releccud-api.online-trader.net/api/v1
 #VITE_API_URL = http://192.168.0.150/api/v1
+#VITE_API_URL = http://192.168.1.163/api/v1
