--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_URL = http://releccud-api.onomo.gold-trader.org/api/v1
+#VITE_API_URL = http://releccud-api.onomo.gold-trader.org/api/v1
+
+VITE_API_URL = http://releccud-api.online-trader.net/api/v1
