--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "framer-motion": "^12.5.0",
     "heroicons": "^2.2.0",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
